--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^26.0.15",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -56,7 +57,9 @@
     "jest-plugin-context": "^2.9.0",
     "json-server": "^0.16.3",
     "redux-mock-store": "^1.5.4",
+    "sass-loader": "^10.1.0",
     "start-server-and-test": "^1.11.5",
+    "style-loader": "^2.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
