--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "coverage": "npm run test:unit -- --coverage",
     "test": "npm run test:unit -- --watch-all",
     "lint": "eslint --ext js,jsx .",
-    "server:start": "json-server --watch fake-server/db.json"
+    "server:start": "json-server --watch fake-server/db.json",
+    "build": "NODE_ENV=production webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,7 @@
     "@types/jest": "^26.0.15",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -54,15 +56,16 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "given2": "^2.1.7",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "jest-plugin-context": "^2.9.0",
     "json-server": "^0.16.3",
     "redux-mock-store": "^1.5.4",
-    "sass-loader": "^10.1.0",
     "start-server-and-test": "^1.11.5",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
