--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -63,6 +61,8 @@
     "jest": "^26.6.3",
     "jest-plugin-context": "^2.9.0",
     "json-server": "^0.16.3",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.4",
     "start-server-and-test": "^1.11.5",
     "style-loader": "^2.0.0",
