--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npm run test:unit -- --watch-all",
     "lint": "eslint --ext js,jsx .",
     "server:start": "json-server --watch fake-server/db.json",
-    "build": "NODE_ENV=production webpack --progress"
+    "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "axios": "^0.21.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "firebase": "^8.1.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "qs": "^6.9.4",
@@ -51,7 +52,9 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
+    "dotenv-webpack": "^6.0.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
