--- a/package.json
+++ b/package.json
@@ -31,18 +31,19 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^8.1.1",
+    "immer": "^8.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "qs": "^6.9.4",
     "react": "^17.0.1",
-    "redux-devtools-extension": "^2.13.8",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
-    "redux-logger": "^3.0.6",
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
