--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress",
-    "test:unit": "jest --setupFiles dotenv/config",
+    "test:unit": "jest",
     "coverage": "npm run test:unit -- --coverage",
-    "test": "npm run test:unit -- --watch-all --setupFiles dotenv/config",
+    "test": "npm run test:unit -- --watch-all",
     "lint": "eslint --ext js,jsx .",
     "build": "cross-env NODE_ENV=production webpack --progress"
   },
@@ -58,7 +58,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
-    "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
