--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,21 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install
       run: npm ci
+    - name: Create env file
+        run: |
+          touch .env
+          echo FIREBASE_API_KEY= ${{ secrets.FIREBASE_API_KEY }} >> .env
+          echo FIREBASE_APP_ID= ${{ secrets.FIREBASE_APP_ID }} >> .env
+          echo FIREBASE_AUTH_DOMAIN= ${{ secrets.FIREBASE_AUTH_DOMAIN }} >> .env
+          echo FIREBASE_DATA_BASEURL= ${{ secrets.FIREBASE_DATA_BASEURL }} >> .env
+          echo FIREBASE_MEASUREMENT_ID= ${{ secrets.FIREBASE_MEASUREMENT_ID }} >> .env
+          echo FIREBASE_MESSAGING_SENDER_ID= ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }} >> .env
+          echo FIREBASE_PROJECT_ID= ${{ secrets.FIREBASE_PROJECT_ID }} >> .env
+          echo FIREBASE_STORAGE_BUCKET= ${{ secrets.FIREBASE_STORAGE_BUCKET }} >> .env
+          cat .env
     - name: Test
       run: npm run test:unit
       env:
-        FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-        FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-        FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-        FIREBASE_DATA_BASEURL:  ${{ secrets.FIREBASE_DATA_BASEURL }}
-        FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
-        FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-        FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-        FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+        HEADLESS: true
     - name: Lint
       run: npm run lint
