--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^8.1.1",
+    "html-to-draftjs": "^1.5.0",
     "immer": "^8.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
