--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,7 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: CI
 
 on:
-  push:
+  pull_request:
     branches: [ main ]
 
 jobs:
@@ -24,18 +21,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install
       run: npm ci
-    - name: Create env file
-      run: |
-        touch .env
-        echo FIREBASE_API_KEY= ${{ secrets.FIREBASE_API_KEY }} >> .env
-        echo FIREBASE_APP_ID= ${{ secrets.FIREBASE_APP_ID }} >> .env
-        echo FIREBASE_AUTH_DOMAIN= ${{ secrets.FIREBASE_AUTH_DOMAIN }} >> .env
-        echo FIREBASE_DATA_BASEURL= ${{ secrets.FIREBASE_DATA_BASEURL }} >> .env
-        echo FIREBASE_MEASUREMENT_ID= ${{ secrets.FIREBASE_MEASUREMENT_ID }} >> .env
-        echo FIREBASE_MESSAGING_SENDER_ID= ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }} >> .env
-        echo FIREBASE_PROJECT_ID= ${{ secrets.FIREBASE_PROJECT_ID }} >> .env
-        echo FIREBASE_STORAGE_BUCKET= ${{ secrets.FIREBASE_STORAGE_BUCKET }} >> .env
-        cat .env
     - name: Test
       run: npm run test:unit
       env:
