--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,9 +20,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install
-      run: npm ci
+      run: npm install
     - name: Test
-      run: npm run coverage
+      run: npx jest --coverage
       env:
         HEADLESS: true
     - name: Upload coverage to Codecov
