--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,6 +13,18 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Dependencies
         run: npm install
+      - name: Create env file
+        run: |
+          touch .env
+          echo FIREBASE_API_KEY= ${{ secrets.FIREBASE_API_KEY }} >> .env
+          echo FIREBASE_APP_ID= ${{ secrets.FIREBASE_APP_ID }} >> .env
+          echo FIREBASE_AUTH_DOMAIN= ${{ secrets.FIREBASE_AUTH_DOMAIN }} >> .env
+          echo FIREBASE_DATA_BASEURL= ${{ secrets.FIREBASE_DATA_BASEURL }} >> .env
+          echo FIREBASE_MEASUREMENT_ID= ${{ secrets.FIREBASE_MEASUREMENT_ID }} >> .env
+          echo FIREBASE_MESSAGING_SENDER_ID= ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }} >> .env
+          echo FIREBASE_PROJECT_ID= ${{ secrets.FIREBASE_PROJECT_ID }} >> .env
+          echo FIREBASE_STORAGE_BUCKET= ${{ secrets.FIREBASE_STORAGE_BUCKET }} >> .env
+          cat .env
       - name: Build
         run: npm run build
       - name: Archive Production Artifact
