--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-star-ratings": "^2.3.0",
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
