--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "d2coding": "^1.3.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "facepaint": "^1.2.1",
     "firebase": "^8.1.1",
     "html-to-draftjs": "^1.5.0",
     "immer": "^8.0.0",
@@ -44,6 +45,7 @@
     "react-icons": "^4.1.0",
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-star-ratings": "^2.3.0",
     "react-use": "^15.3.4",
