--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "coverage": "npm run test:unit -- --coverage",
     "test": "npm run test:unit -- --watch-all",
     "lint": "eslint --ext js,jsx .",
-    "build": "cross-env NODE_ENV=production webpack --progress"
+    "build": "cross-env NODE_ENV=production webpack --progress",
+    "coverage:ci": "npm run test:unit --ci --coverage && codecov"
   },
   "repository": {
     "type": "git",
