--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@reduxjs/toolkit": "^1.4.0",
-    "axios": "^0.21.0",
     "d2coding": "^1.3.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "emotion-reset": "^3.0.0",
     "facepaint": "^1.2.1",
     "firebase": "^8.1.1",
     "html-to-draftjs": "^1.5.0",
@@ -83,6 +83,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-plugin-context": "^2.9.0",
+    "mini-css-extract-plugin": "^1.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "redux-mock-store": "^1.5.4",
     "start-server-and-test": "^1.11.5",
     "style-loader": "^2.0.0",
