--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-content-loader": "^5.1.4",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-helmet": "^6.1.0",
