[Feature] theme toggle 버튼 만들어라 #171
- Add svg to be used for theme toggle button
- npm install react-toogle dependencies

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-star-ratings": "^2.3.0",
+    "react-toggle": "^4.1.2",
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
