[Feature] e2e 테스트를 위한 codeceptjs 초기 설정을 해라 #193
- .gitignore에 codeceptjs의 output 추가
- codeceptjs dependencies 설치
    - @codeceptjs/configure
    - @codeceptjs/ui
    - codeceptjs
    - playwright
- codeceptjs 초기 설정
- ci.yml의 Test 명령어 변경

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install
       run: npm ci
     - name: Test
-      run: npm run test:unit
+      run: npm run test
       env:
         HEADLESS: true
     - name: Lint
