--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "start": "webpack-dev-server --progress",
     "test:unit": "jest",
+    "test:watch": "npm run test:unit -- --watch-all",
+    "test:e2e": "codeceptjs run --steps",
+    "test:e2e:headless": "HEADLESS=true codeceptjs run --steps",
+    "test:e2e:ui": "codecept-ui --app",
+    "test": "npm run coverage && start-server-and-test start http://localhost:8080 test:e2e",
     "coverage": "npm run test:unit -- --coverage",
-    "test": "npm run test:unit -- --watch-all",
+    "coverage:ci": "npm run test:unit --ci --coverage && codecov",
     "lint": "eslint --ext js,jsx .",
-    "build": "cross-env NODE_ENV=production webpack --progress",
-    "coverage:ci": "npm run test:unit --ci --coverage && codecov"
+    "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -23,6 +27,7 @@
   },
   "homepage": "https://sweet-1cfff.firebaseapp.com/",
   "dependencies": {
+    "@codeceptjs/configure": "^0.6.2",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
@@ -62,6 +67,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@codeceptjs/ui": "^0.4.5",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
@@ -69,6 +75,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
+    "codeceptjs": "^3.0.7",
     "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
@@ -88,6 +95,7 @@
     "jest-plugin-context": "^2.9.0",
     "mini-css-extract-plugin": "^1.4.1",
     "optimize-css-assets-webpack-plugin": "^6.0.0",
+    "playwright": "^1.11.1",
     "redux-mock-store": "^1.5.4",
     "start-server-and-test": "^1.11.5",
     "style-loader": "^2.0.0",
@@ -95,6 +103,6 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.7.2"
   }
 }
