[Test] 스터디 신청에 관련된 e2e 테스트를 작성하라 - #193
- 스터디 신청 및 신청서, 참여 승인에 관련된 e2e 테스트를 작성

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:e2e": "codeceptjs run --steps",
     "test:e2e:headless": "HEADLESS=true codeceptjs run --steps",
     "test:e2e:ui": "codecept-ui --app",
-    "test": "npm run coverage && start-server-and-test start http://localhost:8080 test:e2e:headless",
+    "test": "npm run coverage && start-server-and-test start http://localhost:8080 test:e2e",
     "coverage": "npm run test:unit -- --coverage",
     "coverage:ci": "npm run test:unit --ci --coverage && codecov",
     "lint": "eslint --ext js,jsx .",
