[Update] 기능 추가로 인해 README.md를 변경하라 - #201
- 누락 end of line 추가
- 추가된 기능에 대한 README.md 파일를 update
- 모바일, 다크모드 사진 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,12 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  test:
+    name: CI
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [12.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
