--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.5",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.10.0",
     "react-icons": "^4.1.0",
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
