--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
+    "@testing-library/react-hooks": "^7.0.1",
     "@types/jest": "^26.0.15",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
