--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.5",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.10.0",
     "react-icons": "^4.1.0",
     "react-moment": "^1.0.0",
