--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "@sentry/react": "^6.9.0",
+    "@sentry/tracing": "^6.9.0",
     "d2coding": "^1.3.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
