--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,7 @@ jobs:
           echo FIREBASE_MESSAGING_SENDER_ID= ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }} >> .env
           echo FIREBASE_PROJECT_ID= ${{ secrets.FIREBASE_PROJECT_ID }} >> .env
           echo FIREBASE_STORAGE_BUCKET= ${{ secrets.FIREBASE_STORAGE_BUCKET }} >> .env
+          echo SENTRY_DSN= ${{ secrets.SENTRY_DSN }} >> .env
           cat .env
       - name: Build
         run: npm run build
