--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
-    "allowJs": true
-  }
+    "experimentalDecorators": true,
+    "baseUrl": "src",
+    "jsx": "react"
+  },
 }
