--- a/.github/workflows/codecov-test-suites.yml
+++ b/.github/workflows/codecov-test-suites.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2 # Check out your repository
-    - run: npm i # Install dependencies
-    - run: npm run coverage # Run test
+    - run: yarn install # Install dependencies
+    - run: yarn run coverage # Run test
     - run: bash <(curl -s https://codecov.io/bash) # Upload to Codecov
