--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
       - name: Create env file
         run: |
           touch .env
@@ -27,7 +27,7 @@ jobs:
           echo SENTRY_DSN= ${{ secrets.SENTRY_DSN }} >> .env
           cat .env
       - name: Build
-        run: npm run build
+        run: yarn run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
